--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,1 @@
-#Jpa Database Setting
-spring.jpa.show-sql=true
-spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-#Mysql Connection
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://133.186.144.236:3306/nhn_academy_6?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=nhn_academy_6
-spring.datasource.password=p63Amk!F0Mgvrd3&
-
-#Connection Pool Setting
-spring.datasource.dbcp2.initial-size=10
-spring.datasource.dbcp2.max-total=10
-spring.datasource.dbcp2.min-idle=10
-spring.datasource.dbcp2.max-idle=10
-spring.datasource.dbcp2.max-wait-millis=1000
-spring.datasource.dbcp2.test-on-borrow=true
-spring.datasource.dbcp2.test-on-return=true
-spring.datasource.dbcp2.test-while-idle=true
+spring.profiles.active=prod
