--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,9 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
@@ -104,25 +107,19 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+
 			<plugin>
-				<groupId>com.mysema.maven</groupId>
-				<artifactId>apt-maven-plugin</artifactId>
-				<version>1.1.3</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.0</version>
 				<configuration>
-					<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+
+					<skipTests>false</skipTests>
 				</configuration>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>process</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/generated-sources/annotations</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
+
+
 		</plugins>
 	</build>
 </project>
